FIX: overflow images

--- a/page.css
+++ b/page.css
@@ -68,7 +68,11 @@ header img {
     }
     
     header img {
-       display: none;
+       
+    }
+
+    header h1 {
+        font-size: 0.8rem;
     }
 }
 
@@ -78,18 +82,22 @@ header img {
 #main {
     margin-left: auto;
     margin-right: auto;
-    max-width: 40rem;
-    width: 100%;
+    width: 40rem;
 }
 
-@media screen and (max-width:  40rem) {
+@media (max-width:  40rem) {
     #main{
         margin-left: 1rem;
         margin-right: 1rem;
         width: calc(100% - 2rem);
     }
-
 }
+
+img {
+    width: 100%;
+    display: block;
+}
+
 
 .imgs {
     display: flex;
@@ -97,18 +105,16 @@ header img {
     justify-content: center;
     margin: 0;
     padding: 0;
+    width: 100%;
 }
 
 .imgs img {
-    width: 100%;
-    object-fit: cover;
+    flex: 1;
     margin: 1px 1px;
+    object-fit: cover;
+    width: 50px;
 }
 
-
-img {
-    max-width: 100%;
-}
 
 .todo,
 .code {
